@@ -6,10 +6,7 @@ import com.predic8.membrane.core.Router;
 import com.predic8.membrane.core.util.jdbc.AbstractJdbcSupport;
 import org.jetbrains.annotations.NotNull;
 
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import java.sql.SQLException;
+import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -19,24 +16,38 @@ public class DatabaseApiKeyStore extends AbstractJdbcSupport implements ApiKeySt
 
     private KeyTable keyTable;
     private ScopeTable scopeTable;
+    private Connection connection;
 
     @Override
     public void init(Router router) {
         super.init(router);
+        try {
+            connection = getDatasource().getConnection();
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     public Optional<List<String>> getScopes(String apiKey) throws UnauthorizedApiKeyException {
-        try (Connection connection = getDatasource().getConnection()) {
-            checkApiKey(apiKey, connection);
-            return fetchScopes(apiKey, connection);
+        try {
+            checkApiKey(apiKey);
+            return fetchScopes(apiKey);
         } catch (Exception e) {
             throw new RuntimeException("Error while retrieving scopes for API key: " + apiKey, e);
         }
     }
 
-    private @NotNull Optional<List<String>> fetchScopes(String apiKey, Connection connection) throws SQLException {
-        try (PreparedStatement stmt = connection.prepareStatement("SELECT * FROM %s,%s WHERE apikey.id=key_id AND apikey.key_value = ?".formatted(keyTable.getName(), scopeTable.getName()))) {
+    private void checkApiKey(String apiKey) throws SQLException {
+        try (PreparedStatement stmt = connection.prepareStatement("SELECT * FROM %s WHERE key_value = ?".formatted(keyTable.getName()))) {
+            stmt.setString(1, apiKey);
+        } catch (SQLException e) {
+            createTables();
+        }
+    }
+
+    private @NotNull Optional<List<String>> fetchScopes(String apiKey) throws SQLException {
+        try (PreparedStatement stmt = connection.prepareStatement("SELECT * FROM %s a,%s s WHERE a.key_value=s.key_value AND a.key_value = ?".formatted(keyTable.getName(), scopeTable.getName()))) {
             stmt.setString(1, apiKey);
             try (ResultSet rs = stmt.executeQuery()) {
                 List<String> scopes = new ArrayList<>();
@@ -48,15 +59,20 @@ public class DatabaseApiKeyStore extends AbstractJdbcSupport implements ApiKeySt
         }
     }
 
-    private void checkApiKey(String apiKey, Connection connection) throws SQLException, UnauthorizedApiKeyException {
-        try (PreparedStatement stmt = connection.prepareStatement("SELECT * FROM %s WHERE key_value = ?".formatted(keyTable.getName()))) {
-            stmt.setString(1, apiKey);
-            try (ResultSet rs = stmt.executeQuery()) {
-                if (!rs.next()) {
-                    throw new UnauthorizedApiKeyException();
-                }
-            }
-        }
+    private void createTables() throws SQLException {
+        Statement stmt = connection.createStatement();
+        stmt.executeUpdate(String.format("""
+                CREATE TABLE %s (
+                    key_value VARCHAR(255) NOT NULL PRIMARY KEY
+                )
+                """, keyTable.getName()));
+
+        stmt.executeUpdate(String.format("""
+                CREATE TABLE %s (
+                    key_value VARCHAR(255) NOT NULL REFERENCES %s (key_value),
+                    scope VARCHAR(255) NOT NULL
+                )
+                """, scopeTable.getName(), keyTable.getName()));
     }
 
     @MCChildElement(order = 0)
